spring boot keycloak setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ keycloak.domain = localhost:8080
 keycloak.adminClientId = admin-cli
 keycloak.adminClientSecret = vyBv4a52YYN97cvRkZYGtZ98pFmtjZlV
 keycloak.urls.auth = http://${keycloak.domain}
+
+keycloak.auth-server-url = http://${keycloak.domain}
+keycloak.resource = democlient
