--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 
@@ -55,20 +61,27 @@
 			<version>23.0.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter -->
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>23.0.1</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-client -->
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-client</artifactId>
-			<version>6.2.6.Final</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.jboss.resteasy</groupId>-->
+<!--			<artifactId>resteasy-client</artifactId>-->
+<!--			<version>6.2.6.Final</version>-->
+<!--		</dependency>-->
 
 
-		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jackson-provider -->
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jackson-provider</artifactId>
-			<version>4.0.0.Beta5</version>
-		</dependency>
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jackson-provider &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.jboss.resteasy</groupId>-->
+<!--			<artifactId>resteasy-jackson-provider</artifactId>-->
+<!--			<version>4.0.0.Beta5</version>-->
+<!--		</dependency>-->
 
 
 		<dependency>
