spring boot keycloak setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.output.ansi.enabled = always
 
 # HTTP Server Port
-server.port = 8081
+server.port = 8181
 
 # Connect to Keycloak (Auth) Server
 spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8080/realms/myrealm
@@ -14,4 +14,4 @@ keycloak.adminClientSecret = vyBv4a52YYN97cvRkZYGtZ98pFmtjZlV
 keycloak.urls.auth = http://${keycloak.domain}
 
 keycloak.auth-server-url = http://${keycloak.domain}
-keycloak.resource = democlient
+#keycloak.resource = democlient
