spring boot keycloak setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,17 @@ server.port = 8181
 spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8080/realms/myrealm
 spring.security.oauth2.resourceserver.jwk-set-uri = ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
-keycloak.realm = myrealm
-keycloak.domain = localhost:8080
-keycloak.adminClientId = admin-cli
-keycloak.adminClientSecret = vyBv4a52YYN97cvRkZYGtZ98pFmtjZlV
-keycloak.urls.auth = http://${keycloak.domain}
+#keycloak.realm = myrealm
+#keycloak.domain = localhost:8080
+#keycloak.adminClientId = admin-cli
+#keycloak.adminClientSecret = vyBv4a52YYN97cvRkZYGtZ98pFmtjZlV
+#keycloak.urls.auth = http://${keycloak.domain}
+#keycloak.auth-server-url = http://${keycloak.domain}
 
-keycloak.auth-server-url = http://${keycloak.domain}
-#keycloak.resource = democlient
+# Keycloak Configuration
+keycloak.realm = myrealm
+keycloak.server-url = http://localhost:8080
+keycloak.adminClientId = admin-cli
+#keycloak.grant-type = password
+keycloak.username = narutouzumaki
+keycloak.password = test123
