--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-admin-client -->
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-admin-client</artifactId>
 			<version>23.0.1</version>
 		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter -->
 		<dependency>
@@ -66,6 +68,15 @@
 			<artifactId>keycloak-spring-boot-starter</artifactId>
 			<version>23.0.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-servlet-filter-adapter -->
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-servlet-filter-adapter</artifactId>
+			<version>23.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-client -->
 <!--		<dependency>-->
