spring boot keycloak setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.security.oauth2.resourceserver.jwk-set-uri = ${spring.security.oauth2.res
 #keycloak.urls.auth = http://${keycloak.domain}
 #keycloak.auth-server-url = http://${keycloak.domain}
 
+# Swagger UI Configuration
+springdoc.swagger-ui.oauth.client-id = democlient
+springdoc.swagger-ui.oauth.client-secret = wtgKoNE05CeMzY5AbCOZLXs8uk53zMHR
+
 # Keycloak Configuration
 keycloak.realm = myrealm
 keycloak.server-url = http://localhost:8080
