spring boot keycloak setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,10 @@ server.port = 8181
 spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8080/realms/myrealm
 spring.security.oauth2.resourceserver.jwk-set-uri = ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
-#keycloak.realm = myrealm
-#keycloak.domain = localhost:8080
-#keycloak.adminClientId = admin-cli
-#keycloak.adminClientSecret = vyBv4a52YYN97cvRkZYGtZ98pFmtjZlV
-#keycloak.urls.auth = http://${keycloak.domain}
-#keycloak.auth-server-url = http://${keycloak.domain}
 
 # Swagger UI Configuration
-springdoc.swagger-ui.oauth.client-id = democlient
-springdoc.swagger-ui.oauth.client-secret = wtgKoNE05CeMzY5AbCOZLXs8uk53zMHR
+#springdoc.swagger-ui.oauth.client-id = democlient
+#springdoc.swagger-ui.oauth.client-secret = wtgKoNE05CeMzY5AbCOZLXs8uk53zMHR
 
 # Keycloak Configuration
 keycloak.realm = myrealm
