--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,9 @@ spring.security.oauth2.resourceserver.jwk-set-uri = ${spring.security.oauth2.res
 # Keycloak Configuration
 keycloak.realm = myrealm
 keycloak.server-url = http://localhost:8080
-keycloak.adminClientId = admin-cli
-#keycloak.grant-type = password
+keycloak.adminCli = admin-cli
 keycloak.username = narutouzumaki
 keycloak.password = test123
+
+keycloak.clientId = democlient
+keycloak.clientSecret = wtgKoNE05CeMzY5AbCOZLXs8uk53zMHR
