--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,15 @@ spring.security.oauth2.resourceserver.jwk-set-uri = ${spring.security.oauth2.res
 
 # Swagger UI Configuration
 #springdoc.swagger-ui.oauth.client-id = democlient
-#springdoc.swagger-ui.oauth.client-secret = wtgKoNE05CeMzY5AbCOZLXs8uk53zMHR
+##springdoc.swagger-ui.oauth.client-secret = wtgKoNE05CeMzY5AbCOZLXs8uk53zMHR
 
 # Keycloak Configuration
 keycloak.realm = myrealm
 keycloak.server-url = http://localhost:8080
 keycloak.adminCli = admin-cli
-keycloak.username = narutouzumaki
-keycloak.password = test123
+
+keycloak.admin-username = narutouzumaki
+keycloak.admin-password = test123
 
 keycloak.clientId = democlient
 keycloak.clientSecret = wtgKoNE05CeMzY5AbCOZLXs8uk53zMHR
