--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.output.ansi.enabled = always
 server.port = 8181
 
 # Connect to Keycloak (Auth) Server
-spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8080/realms/myrealm
+spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8080/realms/${keycloak.realm}
 spring.security.oauth2.resourceserver.jwk-set-uri = ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 
